# dscontrol

./: CMakeLists.txt  README.md
DSControl/: CMakeLists.txt  app_icon.rc  main.cpp
DSDesigner/: CMakeLists.txt  addcustomwidgetdialog.cpp  addcustomwidgetdialog.h  addcustomwidgetdialog.ui  appfontdialog.cpp  include.cmake  mainwindow.cpp  mainwindow.h  newform.cpp  qdesigner.cpp  qdesigner.h  qdesigner_actions.cpp  qdesigner_actions.h  qdesigner_appearanceoptions.ui  qdesigner_formwindow.cpp  qdesigner_settings.cpp  qdesigner_settings.h  qdesigner_workbench.cpp  qdesigner_workbench.h
manager/: BaseSettings.cpp  BaseSettings.h  CMakeLists.txt  ComponentCreator.cpp  ComponentCreator.h  ControllManager.cpp  ControllManager.hpp  CustomDesignerPluginGenerator.cpp  CustomDesignerPluginGenerator.h  DSConfiguration.cpp  DSConfiguration.h  IDEProjectCreator.cpp  IDEProjectCreator.hpp  LinuxSettings.cpp  LinuxSettings.h  MessagesDeserializer.cpp  MessagesDeserializer.hpp  OutXmlGenerator.cpp  OutXmlGenerator.hpp  Project.cpp  Project.hpp  ProjectDocumentCreator.cpp  ProjectDocumentCreator.hpp  WindowsSettings.cpp  WindowsSettings.h  include.cmake
manager/models/: AbstractItemModel.cpp  AbstractItemModel.hpp  AbstractItemModelMonitor.cpp  AbstractItemModelMonitor.hpp  AbstractNodeItem.cpp  AbstractNodeItem.hpp  AbstractNodeItemMonitor.cpp  AbstractNodeItemMonitor.hpp  AllConnectionModel.cpp  AllConnectionModel.hpp  CommunicationModel.cpp  CommunicationModel.hpp  ConnectionsStaticModel.cpp  ConnectionsStaticModel.hpp  DSProxyModel.cpp  DSProxyModel.hpp  MessageModel.cpp  MessageModel.hpp  MimeStoreModel.cpp  MimeStoreModel.hpp  NestedItem.cpp  NestedItem.hpp  NodeItem.cpp  NodeItem.hpp  ObjectConnectionModel.cpp  ObjectConnectionModel.hpp  ProjectModel.cpp  ProjectModel.hpp  ProjectModelItem.cpp  ProjectModelItem.hpp  ProjectTreeItem.cpp  ProjectTreeItem.hpp  ProjectTreeModel.cpp  ProjectTreeModel.hpp  PropertiesItemDelegate.cpp  PropertiesItemDelegate.hpp  PropertiesProxyModel.cpp  PropertiesProxyModel.hpp  PropertiesTreeItem.cpp  PropertiesTreeItem.hpp  (+12 more)
manager/resources/: HeaderExample.h  ProExample.pro  SourceExample.cpp  res_test.qrc
network/: CMakeLists.txt  DSServerComm.cpp  DSServerComm.h  DSServerCommImp.cpp  DSServerCommImp.h  DSServerCommImpBase.h  NetDefine.h  SettingsManager.hpp  include.cmake
network/businessComponents/: CMakeLists.txt
nodeeditor/: CMakeLists.txt  include.cmake
nodeeditor/arrows/: AbstractArrow.cpp  AbstractArrow.h  Annulus.cpp  Annulus.h  ArrowPicture.cpp  ArrowPicture.h  ArrowPosition.cpp  ArrowPosition.h  Circle.cpp  Circle.h  ConnectionArrow.cpp  ConnectionArrow.h  CurvedArrow.cpp  CurvedArrow.h  EdgePoint.cpp  EdgePoint.h  EquilateralTriangle.cpp  EquilateralTriangle.h  LateralArrow.cpp  LateralArrow.h  LateralHorizontalArrow.cpp  LateralHorizontalArrow.h  LateralVerticalArrow.cpp  LateralVerticalArrow.h  LineArrow.cpp  LineArrow.h  PolyLineArrow.cpp  PolyLineArrow.h  SpecialStyleArrow.cpp  SpecialStyleArrow.h  SpecialTextItem.cpp  SpecialTextItem.h  TinyMath.cpp  TinyMath.h  TreeStyleArrow.cpp  TreeStyleArrow.h  TreeStyleHorizontalArrow.cpp  TreeStyleHorizontalArrow.h  TreeStyleVerticalArrow.cpp  TreeStyleVerticalArrow.h
nodeeditor/common/: ArrowController.cpp  ArrowController.h  IdentityUnit.cpp  IdentityUnit.h  SerializableIdentityUnit.cpp  SerializableIdentityUnit.h  nodeeditor_globals.hpp
nodeeditor/factories/: AbstractCommandFactory.hpp  CommandFactory.cpp  CommandFactory.hpp
nodeeditor/lists/: Communication.cpp  Communication.hpp  CommunicationList.cpp  CommunicationList.hpp  Message.cpp  Message.hpp  MessageList.cpp  MessageList.hpp
nodeeditor/models/: DataFlowModel.cpp  DataFlowModel.hpp  DataFlowModelIteratorImpl.cpp  DataFlowModelIteratorImpl.hpp  FlowSelectionModel.cpp  FlowSelectionModel.hpp  MimeGenerator.cpp  MimeGenerator.hpp  ModelAdapter.cpp  ModelAdapter.hpp  NodeIterator.cpp  NodesModel.cpp  NodesModel.hpp  NodesScene.cpp  NodesScene.hpp
nodeeditor/nodes/: ApplicationItemImpl.cpp  ApplicationItemImpl.h  ApplicationNode.cpp  ApplicationNode.hpp  ComponentItemImpl.cpp  ComponentItemImpl.h  ComponentNode.cpp  ComponentNode.hpp  ComputerItemImpl.cpp  ComputerItemImpl.h  ComputerNode.cpp  ComputerNode.hpp  Connection.cpp  Connection.hpp  ConnectionID.hpp  FlowItemMimeData.cpp  FlowItemMimeData.hpp  Node.cpp  Node.hpp  NodeImp.cpp  NodeImp.hpp  NodeIndex.cpp  NodeIndex.hpp  NodeIteratorImpl.hpp  QStringStdHash.hpp  QUuidStdHash.hpp  Serializable.hpp  SubSystemItemImpl.cpp  SubSystemItemImpl.h  SubSystemNode.cpp  SubSystemNode.hpp  SystemItemImpl.cpp  SystemItemImpl.h  SystemNode.cpp  SystemNode.hpp  UniversalGraphicsItemImpl.cpp  UniversalGraphicsItemImpl.h
nodeeditor/resources/: nodeeditorResources.qrc
nodeeditor/scenes/: FlowScene.cpp  FlowScene.hpp
nodeeditor/singletones/: ClipboardController.cpp  ClipboardController.hpp  Facade.cpp  Facade.hpp  MenuBuilder.cpp  MenuBuilder.h  NameController.cpp  NameController.hpp  UndoController.cpp  UndoController.hpp
nodeeditor/styles/: FlowViewStyle.cpp  FlowViewStyle.hpp  MiniViewStyle.cpp  MiniViewStyle.hpp  NodeStyle.cpp  NodeStyle.hpp  StyleCollection.cpp  StyleCollection.hpp
nodeeditor/views/: FlowView.cpp  FlowView.hpp  FlowViewPainter.cpp  FlowViewPainter.hpp  MiniView.cpp  MiniView.hpp
nodeeditor/widgets/: RenameDialog.cpp  RenameDialog.h  RenameDialog.ui  RenameNodeDialog.cpp  RenameNodeDialog.h  TextInputDialog.cpp  TextInputDialog.h  TextInputDialog.ui
testComponents/: CMakeLists.txt  dshost.properties
testComponents/echo/: CMakeLists.txt
ui/: CMakeLists.txt  app_icon.rc  resources.qrc
ui/component_creator/: BaseDefine.h  BlankComponent.cpp  BlankComponent.h  BndlspecFrame.h  CMakeLists.txt  CmakeFrame.h  CodeFrameConfig.xml  ComponentCreateConfig.cpp  ComponentCreateConfig.h  ComponentCreateConfig.ui  CppHeaderFrame.h  FindDS.cmake  IDEProjectProperties.cpp  IDEProjectProperties.hpp  IDEProjectProperties.ui  RecipeManager.cpp  RecipeManager.h  build.cmake  component_creator.cpp  component_creator.hpp  component_parser.cpp  component_parser.hpp  (+15 more)
(+750 files in other folders)
